After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770919 - Fix launching app's details from the "installed" notification
Fix launching app's details from the "installed" notification
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-09-06 00:04 UTC by Joaquim Rocha
Modified: 2016-09-06 08:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix launching app's details from the "installed" notification (4.03 KB, patch)
2016-09-06 00:04 UTC, Joaquim Rocha
none Details | Review

Description Joaquim Rocha 2016-09-06 00:04:21 UTC
It was not finding a plugin for the app that had just been installed
when the user clicked the notification to go into the app's details
page.

To reproduce: click install on an app and minimize GNOME Software.
Comment 1 Joaquim Rocha 2016-09-06 00:04:26 UTC
Created attachment 334862 [details] [review]
Fix launching app's details from the "installed" notification

It was not finding a plugin for the app that had just been installed
when the user clicked the notification to go into the app's details
page.

This patch adds a new method to create a GsApp out of a unique ID,
setting as much info as it can from the ID, and thus increasing the
chances of the app getting adopted by some plugin.
Comment 2 Richard Hughes 2016-09-06 08:44:57 UTC
Applied with a few little fixes and some tests. Thanks!