Fix launching app's details from the "installed" notification

It was not finding a plugin for the app that had just been installed
when the user clicked the notification to go into the app's details
page.

This patch adds a new method to create a GsApp out of a unique ID,
setting as much info as it can from the ID, and thus increasing the
chances of the app getting adopted by some plugin.

https://bugzilla.gnome.org/show_bug.cgi?id=770919

Signed-off-by: Richard Hughes <richard@hughsie.com>